Changed Book and BookTests into Lombok
