# src/main/java/nl/mattworld/book/BookController.java
@@ -3,7 +3,9 @@ package nl.mattworld.book;
 import nl.mattworld.exceptions.NotFoundException;
 import org.springframework.web.bind.annotation.*;
 
+import javax.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 public class BookController {
@@ -15,23 +17,23 @@ public class BookController {
     }
 
     @GetMapping("/api/books")
-    public List<Book> getAllBooks() {
-        return bookService.retrieveBooks();
+    public List<BookDto> getAllBooks() {
+        return bookService.retrieveBooks().stream().map(BookDto::fromEntity).collect(Collectors.toList());
     }
 
     @PostMapping("/api/books")
-    public Book createBook(@RequestBody Book book) {
-        return bookService.createBook(book);
+    public BookDto createBook(@RequestBody @Valid BookDto book) {
+        return BookDto.fromEntity(bookService.createBook(book.toEntity()));
     }
 
     @GetMapping("/api/books/{id}")
-    public Book getBook(@PathVariable String id) {
-        return bookService.findBookById(id).orElseThrow(()->new NotFoundException("Book not found by ID: " + id));
+    public BookDto getBook(@PathVariable String id) {
+        return bookService.findBookById(id).map(BookDto::fromEntity).orElseThrow(()->new NotFoundException("Book not found by ID: " + id));
     }
 
     @PutMapping("/api/books/{id}")
-    public void updateBook(@PathVariable String id, @RequestBody Book update) {
-        bookService.updateBook(id, update);
+    public void updateBook(@PathVariable String id, @RequestBody @Valid BookDto update) {
+        bookService.updateBook(id, update.toEntity());
     }
 
 }
